Fixed plant image stretching

--- a/pot-bot-app/src/styling/homeView.css
+++ b/pot-bot-app/src/styling/homeView.css
@@ -70,6 +70,7 @@ button:hover {
 
 .card-title img {
   border-radius: 10px;
+  object-fit: cover;
 }
 
 .expandable-div:not(.expanded) > .plant-data {
